<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageSort"
        android:layout_width="22dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toStartOf="@id/imageListMode"
        app:layout_constraintTop_toTopOf="@id/imageListMode"
        app:layout_constraintBottom_toBottomOf="@id/imageListMode"
        android:layout_marginEnd="15dp"
        tools:src="@drawable/ic_asc"/>

    <ImageView
        android:id="@+id/imageListMode"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/breedListRecyclerView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="6dp"
        tools:src="@drawable/ic_grid"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/breedListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/imageSort"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"/>

    <ProgressBar
        android:id="@+id/loadingProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/main"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/imageSort"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/error_occurred" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>