<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/breedListFragment">

    <fragment
        android:id="@+id/breedListFragment"
        android:name="com.brunoponte.dogapp.presentation.breedList.BreedListFragment"
        android:label="BreedListFragment"
        tools:layout="@layout/fragment_breed_list" >
        <action
            android:id="@+id/action_breedListFragment_to_breedDetailsFragment"
            app:destination="@id/breedDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

...
